--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,8 @@
 %% ex: ts=4 sw=4 ft=erlang et
 {erl_opts,
  [{parse_transform, lager_transform},
+  {lager_truncation_size, 512000},
+  {lager_extra_sinks, [much,much0,much1,much2,much3,much4]},
   warnings_as_errors,
   warn_export_all
  ]}.
